<resources>
    <string name="app_name">FreeLanceService</string>

    <!--Login Activity-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_link_to_register">Don\'t have an account? <b>Sign Up now!</b></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_LoginWithoutID">Continue without Login</string>

    <!--Register Activity-->
    <string name="register">Register</string>
    <string name="registration">REGISTRATION</string>
    <string name="hint_username">Username</string>
    <string name="hint_phone">Phone No</string>
    <string name="backToLogin">I have an account, log in now.</string>
    <string name="todo">TODO</string>

    <!--Forget Password-->
    <string name="forgot_pg">Forget Your Password ?</string>
    <string name="btn_reset">Reset Password</string>
    <string name="btn_back"><b>Back to login page</b></string>

    <!--User Profile-->
    <string name="btn_UserProfile">Profile</string>

    <!--Display First-->
    <string name="First">Free Lance Center</string>
    <string name="btn_LogoutAdmin">Logout</string>
    <string name="btn_LoginWithour">Continue WIthout Login</string>

    <!--Option Menu-->
    <string name="action_logout">LogOut</string>
    <string name="action_userprofile">User Profile</string>
    <string name="dis_userp">User Profile</string>
    <string name="editprofile">Edit</string>
    <string name="btn_Logout">Log Out</string>

    <!--Edit User Profile-->
    <string name="btn_back_user">back</string>
    <string name="btn_edit_phone">Phone Number</string>
    <string name="btn_edit_name">Name</string>

    <!--Admin Menu-->
    <string name="btn_add_job">Job Add</string>
    <string name="btn_edit_job">Job Modify</string>
    <string name="btn_show_job">Job Show</string>
    <string name="btn_dlt_job">Job Delete</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--Add Job-->
    <string name="btn_add">Confirm</string>
    <string name="Address">Address</string>
    <string name="Salary">Salary</string>
    <string name="addJob">Add Job</string>
    <string name="jobTitle">Job Title</string>
    <string name="JobTitle" />
    <string name="JobDesc" />
    <string name="JobAddress" />
    <string name="JobSalary" />
    <string-array name="JobCategory">
        <item>Choose an Category</item>
        <item>Computer IT</item>
        <item>Accounting &amp; Finance</item>
        <item>Healthcare</item>
        <item>Editing</item>
        <item>Education</item>
        <item>Marketing</item>
        <item>Data Entry</item>
        <item>Administrative</item>
    </string-array>
    <string-array name="State">
        <item>Choose a State</item>
        <item>Pahang</item>
        <item>Selangor</item>
        <item>Perlis</item>
        <item>Perak</item>
        <item>Kuantan</item>
        <item>Kuala Lumpur</item>
    </string-array>

    <string-array name="Progress">
        <item>In progress</item>
        <item>Schedule</item>
        <item>Completed</item>
        <item>Canceled</item>
    </string-array>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="JobArea">Job Area</string>
    <string name="browseAll">Browse All ></string>


    <string name="Description">Job Description</string>
    <string name="dueDate">Application Due Date (optional)</string>

    <string name="cancel" />
    <string name="Add">Add</string>
    <string name="HintDescription">Fill In Job Desc</string>
    <string name="hintDueDate">Fill in Due Date</string>
    <string name="hintSalary">Key in Salary</string>
    <string name="hintAddress">Fill in full address</string>
    <string name="hintJobTitle">Fill in Job Title</string>
    <string name="KualaLumpur">Kuala Lumpur</string>
    <string name="penang">Penang</string>
    <string name="perak">Perak</string>
    <string name="Melaka">Melaka</string>
    <string name="Langkawi">Langkawi</string>
    <string name="Johor">Johor</string>
    <string name="johor">Johor</string>
    <string name="kedah">Kedah</string>
    <string name="terengganu">Terengganu</string>
    <string name="title_activity_job_show_layout">JobShowLayoutActivity</string>
    <string name="Price">Price</string>
    <string name="date">Date</string>
    <string name="BrowseJob">Browse Job</string>
    <string name="State">State</string>
    <string name="jobCategory">Job Category</string>
    <string name="btn_delete" />
    <string name="apply">Apply Now</string>
    <string name="title_activity_job_applied">JobApplied</string>
    <string name="JobApply">Job Apply</string>
    <string name="recentApplyJob">Recent Apply Job</string>
    <string name="complete">complete</string>
    <string name="InProcess">In Process</string>
    <string name="recentAddJob">Recent Added Job</string>
    <string name="title_activity_job_added">JobAdded</string>


</resources>