<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerAddActivity">

    <TextView
        android:id="@+id/textViewAddJob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/addJob"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewJobTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/jobTitle"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddJob" />

    <TextView
        android:id="@+id/textViewJobCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/jobCategory"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextJobTitle"
        app:layout_constraintStart_toStartOf="@+id/editTextJobTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextJobTitle" />

    <TextView
        android:id="@+id/textViewJobDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Description"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/spinnerJobCategory"
        app:layout_constraintStart_toStartOf="@+id/spinnerJobCategory"
        app:layout_constraintTop_toBottomOf="@+id/spinnerJobCategory" />

    <EditText
        android:id="@+id/editTextJobTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hintJobTitle"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/textViewJobTitle"
        app:layout_constraintStart_toStartOf="@+id/textViewJobTitle"
        app:layout_constraintTop_toBottomOf="@+id/textViewJobTitle" />

    <Spinner
        android:id="@+id/spinnerJobCategory"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/jobCategory"
        android:entries="@array/JobCategory"
        android:minHeight="48dp"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="@+id/textViewJobCategory"
        app:layout_constraintStart_toStartOf="@+id/textViewJobCategory"
        app:layout_constraintTop_toBottomOf="@+id/textViewJobCategory"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextJobDescription"
        android:layout_width="393dp"
        android:layout_height="130dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/HintDescription"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:shadowColor="#332F2F"
        android:textColorHint="#FFA19A9A"
        app:layout_constraintEnd_toEndOf="@+id/textViewJobDescription"
        app:layout_constraintStart_toStartOf="@+id/textViewJobDescription"
        app:layout_constraintTop_toBottomOf="@+id/textViewJobDescription"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/textViewAddrees"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Address"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextJobDescription"
        app:layout_constraintStart_toStartOf="@+id/editTextJobDescription"
        app:layout_constraintTop_toBottomOf="@+id/editTextJobDescription" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hintAddress"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="@dimen/min_height"
        android:textColorHint="@color/hintText"
        app:layout_constraintEnd_toEndOf="@+id/textViewAddrees"
        app:layout_constraintStart_toStartOf="@+id/textViewAddrees"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddrees"
        tools:ignore="TextContrastCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/textViewState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/State"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/editTextAddress"
        app:layout_constraintStart_toStartOf="@+id/editTextAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <Spinner
        android:id="@+id/spinnerState"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/State"
        android:entries="@array/State"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/textViewState"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewState"
        app:layout_constraintTop_toBottomOf="@+id/textViewState"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <EditText
        android:id="@+id/editTextNumberSalary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/hintSalary"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="@dimen/min_height"
        app:layout_constraintEnd_toEndOf="@+id/textViewSalary"
        app:layout_constraintStart_toStartOf="@+id/textViewSalary"
        app:layout_constraintTop_toBottomOf="@+id/textViewSalary" />

    <TextView
        android:id="@+id/textViewSalary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Salary"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/spinnerState"
        app:layout_constraintStart_toStartOf="@+id/spinnerState"
        app:layout_constraintTop_toBottomOf="@+id/spinnerState" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/Add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonCancel"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>