<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/skyblue_background"
    tools:context=".UserHomePage">

    <TextView
        android:id="@+id/textViewJobArea"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/JobArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageViewKl"
        android:layout_width="@dimen/areaImage_margin"
        android:layout_height="@dimen/areaImage_margin"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/KualaLumpur"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPenang"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJobArea" />

    <ImageView
        android:id="@+id/imageViewPenang"
        android:layout_width="@dimen/areaImage_margin"
        android:layout_height="@dimen/areaImage_margin"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/penang"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewKl"
        app:layout_constraintEnd_toStartOf="@+id/imageViewPerak"
        app:layout_constraintStart_toEndOf="@+id/imageViewKl"
        app:layout_constraintTop_toTopOf="@+id/imageViewKl"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageViewPerak"
        android:layout_width="@dimen/areaImage_margin"
        android:layout_height="@dimen/areaImage_margin"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/perak"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPenang"
        app:layout_constraintEnd_toStartOf="@+id/imageViewMelaka"
        app:layout_constraintStart_toEndOf="@+id/imageViewPenang"
        app:layout_constraintTop_toTopOf="@+id/imageViewPenang"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageViewMelaka"
        android:layout_width="@dimen/areaImage_margin"
        android:layout_height="@dimen/areaImage_margin"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/Melaka"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewPerak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toEndOf="@+id/imageViewPerak"
        app:layout_constraintTop_toTopOf="@+id/imageViewPerak" />

    <ImageView
        android:id="@+id/imageViewKedah"
        android:layout_width="@dimen/areaImage_margin"
        android:layout_height="@dimen/areaImage_margin"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/kedah"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPerak"
        app:layout_constraintStart_toStartOf="@+id/imageViewPerak"
        app:layout_constraintTop_toBottomOf="@+id/textViewPerak" />

    <ImageView
        android:id="@+id/imageViewJohor"
        android:layout_width="@dimen/areaImage_margin"
        android:layout_height="@dimen/areaImage_margin"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/Johor"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPenang"
        app:layout_constraintStart_toStartOf="@+id/imageViewPenang"
        app:layout_constraintTop_toBottomOf="@+id/textViewPenang" />

    <ImageView
        android:id="@+id/imageViewLangkawi"
        android:layout_width="@dimen/areaImage_margin"
        android:layout_height="@dimen/areaImage_margin"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/Langkawi"
        app:layout_constraintStart_toStartOf="@+id/textViewKL"
        app:layout_constraintTop_toBottomOf="@+id/textViewKL" />

    <ImageView
        android:id="@+id/imageViewTerengganu"
        android:layout_width="@dimen/areaImage_margin"
        android:layout_height="@dimen/areaImage_margin"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/terengganu"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMelaka"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageViewMelaka"
        app:layout_constraintTop_toBottomOf="@+id/textViewMelaka"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textViewKL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/KualaLumpur"
        app:layout_constraintEnd_toEndOf="@+id/imageViewKl"
        app:layout_constraintStart_toStartOf="@+id/imageViewKl"
        app:layout_constraintTop_toBottomOf="@+id/imageViewKl" />

    <TextView
        android:id="@+id/textViewPenang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/penang"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPenang"
        app:layout_constraintStart_toStartOf="@+id/imageViewPenang"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPenang" />

    <TextView
        android:id="@+id/textViewPerak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/perak"
        app:layout_constraintEnd_toEndOf="@+id/imageViewPerak"
        app:layout_constraintStart_toStartOf="@+id/imageViewPerak"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPerak" />

    <TextView
        android:id="@+id/textViewLangkawi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Langkawi"
        app:layout_constraintEnd_toEndOf="@+id/imageViewLangkawi"
        app:layout_constraintStart_toStartOf="@+id/imageViewLangkawi"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLangkawi" />

    <TextView
        android:id="@+id/textViewBrowseAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/browseAll"
        android:textColor="#827717"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewKedah" />

    <TextView
        android:id="@+id/textViewJohor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Johor"
        app:layout_constraintEnd_toEndOf="@+id/imageViewJohor"
        app:layout_constraintStart_toStartOf="@+id/imageViewJohor"
        app:layout_constraintTop_toBottomOf="@+id/imageViewJohor" />

    <TextView
        android:id="@+id/textViewKedah"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/kedah"
        app:layout_constraintEnd_toEndOf="@+id/imageViewKedah"
        app:layout_constraintStart_toStartOf="@+id/imageViewKedah"
        app:layout_constraintTop_toBottomOf="@+id/imageViewKedah" />

    <TextView
        android:id="@+id/textViewMelaka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Melaka"
        app:layout_constraintEnd_toEndOf="@+id/imageViewMelaka"
        app:layout_constraintStart_toStartOf="@+id/imageViewMelaka"
        app:layout_constraintTop_toBottomOf="@+id/imageViewMelaka" />

    <TextView
        android:id="@+id/textViewTerengganu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/terengganu"
        app:layout_constraintEnd_toEndOf="@+id/imageViewTerengganu"
        app:layout_constraintStart_toStartOf="@+id/imageViewTerengganu"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTerengganu" />

    <Button
        android:id="@+id/button_Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/editTTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_email"
        app:layout_constraintBottom_toBottomOf="@+id/button_Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.744"
        app:layout_constraintStart_toStartOf="@+id/textViewJobArea"
        app:layout_constraintTop_toTopOf="@+id/textViewJobArea"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/LogOut"
        android:layout_width="111dp"
        android:layout_height="48dp"
        android:text="@string/btn_Logout"
        app:layout_constraintBottom_toBottomOf="@+id/button_Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewJobArea"
        app:layout_constraintVertical_bias="0.67" />

    <Button
        android:id="@+id/btn_EditUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_UserProfile"
        app:layout_constraintBottom_toTopOf="@+id/button_Next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LogOut" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hint_email"
        app:layout_constraintBottom_toTopOf="@+id/LogOut"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewJobArea"
        app:layout_constraintVertical_bias="0.893" />

</androidx.constraintlayout.widget.ConstraintLayout>